ajuste del proyecto validacion de estado